--- a/src/components/SearchResults.css
+++ b/src/components/SearchResults.css
@@ -1,6 +1,6 @@
 .SearchResults {
     background-color: blueviolet;
-    height: 500px;
+    min-height: 500px;
     width: 300px;
     padding: 10px;
 }
